--- a/app/src/main/res/layout/dialog_add_dividend.xml
+++ b/app/src/main/res/layout/dialog_add_dividend.xml
@@ -65,6 +65,36 @@
         </com.google.android.material.textfield.TextInputLayout>
 
       <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_gravity="center_vertical"
+          android:text="@string/notes"
+          app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
+          app:layout_constraintEnd_toStartOf="@+id/guideline1"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="@+id/textInputLayout2"
+          app:layout_constraintHorizontal_bias="0.0"
+          />
+      <com.google.android.material.textfield.TextInputLayout
+          android:id="@+id/textInputLayout2"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_margin="8dp"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="@+id/guideline1"
+          app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
+          app:endIconMode="clear_text"
+          >
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/addNote"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/design_default_color_background"
+            android:inputType="textMultiLine"
+            />
+      </com.google.android.material.textfield.TextInputLayout>
+
+      <TextView
           android:id="@+id/textViewDividendCycle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
@@ -81,7 +111,7 @@
           android:layout_height="wrap_content"
           android:layout_margin="32dp"
           android:entries="@array/dividend_cycles"
-          app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
+          app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="@+id/guideline1"
           />
