--- a/app/src/main/res/layout/fragment_dividend.xml
+++ b/app/src/main/res/layout/fragment_dividend.xml
@@ -161,14 +161,18 @@
 
       </LinearLayout>
 
-      <androidx.recyclerview.widget.RecyclerView
-          android:id="@+id/dividendsReceivedView"
+      <HorizontalScrollView
+          android:fillViewport="true"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_marginStart="16dp"
-          android:layout_marginEnd="16dp"
-          android:layout_marginTop="16dp"
-          />
+          android:layout_margin="16dp"
+          >
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/dividendsReceivedView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            />
+      </HorizontalScrollView>
 
       <View style="@style/Divider"/>
 
@@ -198,14 +202,18 @@
 
       </LinearLayout>
 
-      <androidx.recyclerview.widget.RecyclerView
-          android:id="@+id/dividendsAnnouncedView"
+      <HorizontalScrollView
+          android:fillViewport="true"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_marginStart="16dp"
-          android:layout_marginEnd="16dp"
-          android:layout_marginTop="16dp"
-          />
+          android:layout_margin="16dp"
+          >
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/dividendsAnnouncedView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            />
+      </HorizontalScrollView>
 
       <View style="@style/Divider"/>
 
