--- a/app/src/main/res/layout/dividend_announced_view_item.xml
+++ b/app/src/main/res/layout/dividend_announced_view_item.xml
@@ -46,7 +46,7 @@ limitations under the License. -->
 
     <TextView
         android:id="@+id/textViewDividendAnnouncedAmount"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:layout_marginEnd="16dp"
@@ -58,7 +58,7 @@ limitations under the License. -->
         />
     <TextView
         android:id="@+id/textViewDividendAnnouncedPayDate"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -69,7 +69,7 @@ limitations under the License. -->
         />
     <TextView
         android:id="@+id/textViewDividendAnnouncedExDate"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -81,7 +81,7 @@ limitations under the License. -->
 
     <TextView
         android:id="@+id/textViewDividendAnnouncedCycle"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -91,7 +91,7 @@ limitations under the License. -->
         />
     <TextView
         android:id="@+id/textViewDividendAnnouncedNote"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -102,7 +102,7 @@ limitations under the License. -->
 
     <TextView
         android:id="@+id/textViewDividendAnnouncedDelete"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:drawableStartCompat="@drawable/ic_action_delete2"
         app:drawableTint="@color/colorPrimaryDark"
