--- a/app/src/main/res/layout/fragment_dividend.xml
+++ b/app/src/main/res/layout/fragment_dividend.xml
@@ -10,6 +10,7 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:scrollbars="vertical"
+      android:fadeScrollbars="false"
       >
 
     <LinearLayout
@@ -166,6 +167,7 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="16dp"
+          android:fadeScrollbars="false"
           >
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/dividendsReceivedView"
@@ -207,6 +209,7 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="16dp"
+          android:fadeScrollbars="false"
           >
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/dividendsAnnouncedView"
