--- a/app/src/main/res/layout/fragment_stockdata.xml
+++ b/app/src/main/res/layout/fragment_stockdata.xml
@@ -59,7 +59,7 @@
         <TextView
             android:id="@+id/textViewName"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="34dp"
             android:layout_weight="0.7"
             android:textSize="13sp"
             />
