--- a/app/src/main/res/layout/fragment_stockdata.xml
+++ b/app/src/main/res/layout/fragment_stockdata.xml
@@ -511,6 +511,228 @@
 
       </LinearLayout>
 
+      <View style="@style/Divider"
+          android:id="@+id/alertGainDivider"
+          android:layout_marginTop="30dp"
+          android:layout_marginStart="16dp"
+          android:layout_marginEnd="16dp"
+          android:layout_marginBottom="10dp"
+          android:visibility="gone"
+          />
+
+      <LinearLayout
+          android:id="@+id/alertGainAboveLayout"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="16dp"
+          android:layout_marginTop="10dp"
+          android:layout_marginEnd="16dp"
+          android:gravity="center_vertical"
+          android:orientation="horizontal"
+          android:visibility="gone"
+          >
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0.4"
+            android:text="@string/alert_gain_above"
+            />
+
+        <ImageView
+            android:src="@drawable/ic_action_trending_up"
+            style="@style/alert_item_imagebutton"
+            android:contentDescription="@string/alert_gain_above"
+            />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/alertGainAboveInputLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+            android:layout_weight="0.6"
+            app:endIconMode="clear_text"
+            >
+          <com.google.android.material.textfield.TextInputEditText
+              android:id="@+id/alertGainAboveInputEditText"
+              android:background="@color/design_default_color_background"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:gravity="end"
+              android:inputType="numberDecimal"
+              android:digits="0123456789.,"
+              android:imeOptions="actionDone"
+              android:maxLength="9"
+              android:maxLines="1"
+              android:textAlignment="textEnd"
+              />
+        </com.google.android.material.textfield.TextInputLayout>
+
+      </LinearLayout>
+
+      <LinearLayout
+          android:id="@+id/alertGainBelowLayout"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="16dp"
+          android:layout_marginTop="10dp"
+          android:layout_marginEnd="16dp"
+          android:gravity="center_vertical"
+          android:orientation="horizontal"
+          android:visibility="gone"
+          >
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0.4"
+            android:text="@string/alert_gain_below"
+            />
+
+        <ImageView
+            android:src="@drawable/ic_action_trending_down"
+            style="@style/alert_item_imagebutton"
+            android:contentDescription="@string/alert_gain_below"
+            />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/alertGainBelowInputLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+            android:layout_weight="0.6"
+            app:endIconMode="clear_text"
+            >
+          <com.google.android.material.textfield.TextInputEditText
+              android:id="@+id/alertGainBelowInputEditText"
+              android:background="@color/design_default_color_background"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:gravity="end"
+              android:inputType="numberDecimal"
+              android:digits="0123456789.,"
+              android:imeOptions="actionDone"
+              android:maxLength="9"
+              android:maxLines="1"
+              android:textAlignment="textEnd"
+              />
+        </com.google.android.material.textfield.TextInputLayout>
+
+      </LinearLayout>
+
+      <View style="@style/Divider"
+          android:id="@+id/alertLossDivider"
+          android:layout_marginTop="30dp"
+          android:layout_marginStart="16dp"
+          android:layout_marginEnd="16dp"
+          android:layout_marginBottom="10dp"
+          android:visibility="gone"
+          />
+
+      <LinearLayout
+          android:id="@+id/alertLossAboveLayout"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="16dp"
+          android:layout_marginTop="10dp"
+          android:layout_marginEnd="16dp"
+          android:gravity="center_vertical"
+          android:orientation="horizontal"
+          android:visibility="gone"
+          >
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0.4"
+            android:text="@string/alert_loss_above"
+            />
+
+        <ImageView
+            android:src="@drawable/ic_action_trending_up"
+            style="@style/alert_item_imagebutton"
+            android:contentDescription="@string/alert_loss_above"
+            />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/alertLossAboveInputLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+            android:layout_weight="0.6"
+            app:endIconMode="clear_text"
+            >
+          <com.google.android.material.textfield.TextInputEditText
+              android:id="@+id/alertLossAboveInputEditText"
+              android:background="@color/design_default_color_background"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:gravity="end"
+              android:inputType="numberDecimal"
+              android:digits="0123456789.,"
+              android:imeOptions="actionDone"
+              android:maxLength="9"
+              android:maxLines="1"
+              android:textAlignment="textEnd"
+              />
+        </com.google.android.material.textfield.TextInputLayout>
+
+      </LinearLayout>
+
+      <LinearLayout
+          android:id="@+id/alertLossBelowLayout"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="16dp"
+          android:layout_marginTop="10dp"
+          android:layout_marginEnd="16dp"
+          android:gravity="center_vertical"
+          android:orientation="horizontal"
+          android:visibility="gone"
+          >
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0.4"
+            android:text="@string/alert_loss_below"
+            />
+
+        <ImageView
+            android:src="@drawable/ic_action_trending_down"
+            style="@style/alert_item_imagebutton"
+            android:contentDescription="@string/alert_loss_below"
+            />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/alertLossBelowInputLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+            android:layout_weight="0.6"
+            app:endIconMode="clear_text"
+            >
+          <com.google.android.material.textfield.TextInputEditText
+              android:id="@+id/alertLossBelowInputEditText"
+              android:background="@color/design_default_color_background"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:gravity="end"
+              android:inputType="numberDecimal"
+              android:digits="0123456789.,"
+              android:imeOptions="actionDone"
+              android:maxLength="9"
+              android:maxLines="1"
+              android:textAlignment="textEnd"
+              />
+        </com.google.android.material.textfield.TextInputLayout>
+
+      </LinearLayout>
+
       <View style="@style/Divider"/>
 
       <TextView
