--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright Stockroom
+<?xml version="1.0" encoding="utf-8"?><!-- Copyright Stockroom
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -14,16 +13,21 @@ See the License for the specific language governing permissions and
 limitations under the License. -->
 
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="buttonLabel">#FFFFFF</color>
-    <color name="backgroundListColor">#F0F0FF</color>
-    <color name="green">#32CD32</color>
-    <color name="postGreen">#2CB22C</color>
-    <color name="red">#DC143C</color>
-    <color name="postRed">#C11336</color>
-    <color name="black">#000000</color>
-    <color name="settingsblue">#33B5E5</color>
+  <color name="colorPrimary">#3F51B5</color>
+  <color name="colorPrimaryDark">#303F9F</color>
+  <color name="colorAccent">#FF4081</color>
+  <color name="buttonLabel">#FFFFFF</color>
+  <color name="backgroundListColor">#F0F0FF</color>
+
+  <color name="green">#32CD32</color>
+  <color name="red">#DC143C</color>
+  <!-- post colors:
+       subtract 15 for V in HSV model
+  -->
+  <color name="postGreen">#29A529</color>
+  <color name="postRed">#B51232</color>
+
+  <color name="black">#000000</color>
+  <color name="settingsblue">#33B5E5</color>
 
 </resources>
