--- a/app/src/main/res/layout/timeline_asset_item.xml
+++ b/app/src/main/res/layout/timeline_asset_item.xml
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="4dp"
-        style="@style/stock_item_text"
+        android:textAppearance="@android:style/TextAppearance.Large"
         />
 
     <TextView
