--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -10,6 +10,7 @@
     <item>News</item>
     <item>Timeline Assets</item>
     <item>Timeline Events</item>
+    <item>Timeline Dividends</item>
   </string-array>
   <string-array name="displayed_views_entries_values">
     <item>0_StockRoomChartFragment</item>
@@ -21,6 +22,7 @@
     <item>6_AllNewsFragment</item>
     <item>7_AssetTimelineFragment</item>
     <item>8_EventTimelineFragment</item>
+    <item>9_DividendTimelineFragment</item>
   </string-array>
   <string-array name="displayed_views_entries_defaults">
     <item>0_StockRoomChartFragment</item>
